objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Create_NCS_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Decides wether an NCS Case should be created based on the Product</description>
        <inlineHelpText>Decides wether an NCS Case should be created based on the Product; if checked, code will look at the Family as well to decide what attributes to add to the Case</inlineHelpText>
        <label>Create NCS Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeProductsSold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Products Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductDescriptionClient__c</fullName>
        <description>Client Facing Product Description</description>
        <label>Product Description (Client)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductNameClient__c</fullName>
        <description>Default Client Facing Product Description</description>
        <label>Product Name (Client)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductChargeType__c</fullName>
        <label>Product Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductChargeType</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>ProductChargeType__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>